K8S/netflix-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-clone
  namespace: netflix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netflix-clone
  template:
    metadata:
      labels:
        app: netflix-clone
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: netflix-clone
      containers:
        - name: web
          image: 141828158518.dkr.ecr.eu-central-1.amazonaws.com/netflix-clone:v1
          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
